--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>hw1</title>
+    <title>lesson</title>
   </head>
   <body>
-    <script src="./js/task-1.js"></script>
-    <!-- <script src="./js/task-2.js"></script>
-    <script src="./js/task-3.js"></script>
-    <script src="./js/task-4.js"></script> -->
-  </body>
+    <script src="./js/lesson-2.js"></script>
+
 </html>
