--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <title>lesson</title>
   </head>
   <body>
-    <script src="./js/lesson-6.js"></script>
+    <script src="./js/lesson-6-2"></script>
 
 </html>
