--- a/index.html
+++ b/index.html
@@ -14,5 +14,21 @@
   </head>
   <body>
     <script src="./js/lesson-7.js"></script>
+    <h1>Page title</h1>
+    <ul id="menu" class="menu">
+  <li class="menu-item">home</li>
+  <li class="menu-item">about</li>
+  <li class="menu-item">gallery</li>
+  <li>blog</li>
+</ul>
+
+
+<ul class="list">
+  <li>First item</li>
+  <li>Second item</li>
+  <li>Third item</li>
+  <li>Fourth item</li>
+  <li>Fifth item</li>
+</ul>
 
 </html>
