--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <title>lesson</title>
   </head>
   <body>
-    <script src="./js/lesson-7.js"></script>
+    
     <h1>Page title</h1>
+    <ul>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 2</a></li>
+    </ul>
     <ul id="menu" class="menu">
   <li class="menu-item">home</li>
   <li class="menu-item">about</li>
@@ -30,5 +34,6 @@
   <li>Fourth item</li>
   <li>Fifth item</li>
 </ul>
-
+<script src="./js/lesson-7.js"></script>
+<body>
 </html>
