--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>lesson</title>
   </head>
   <body>
-    
+    <ul class="list">
+  <li>First item</li>
+  <li>Second item</li>
+  <li>Third item</li>
+  <li>Fourth item</li>
+  <li>Fifth item</li>
+</ul>
     <h1>Page title</h1>
     <ul>
       <li><a href="#">Link 1</a></li>
@@ -25,15 +31,46 @@
   <li class="menu-item">gallery</li>
   <li>blog</li>
 </ul>
+<!-- <a class="link" href="<https://goit.global>">GoIT</a>; -->
+<a class="link is-active" href="<https://goit.global>">GoIT</a>
 
 
-<ul class="list">
-  <li>First item</li>
-  <li>Second item</li>
-  <li>Third item</li>
-  <li>Fourth item</li>
-  <li>Fifth item</li>
+<p class="text">Username: <span class="sub-text">Mango</span></p>
+
+<button class="btn">hi</button>
+
+<img class="image" src="<https://picsum.photos/id/15/320/240>" alt="Rocks and waterfall" width="300" />
+
+<button type="button" data-action="save">Save text</button>
+<button type="button" data-action="close">Close editor</button>
+
+
+<div class="container">
+  <ul class="usernames">
+    <li>Mango</li>
+  </ul>
+</div>
+
+<p class="textt">Random text content</p>
+
+<article class="article">
+  <h2 class="titlee">Article title</h2>
+  <p class="texttt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, ipsa quibusdam! <strong>Praesentium</strong> accusantium fugiat distinctio quidem minima fugit eos, veniam, nam laboriosam deleniti nisi qui neque explicabo perspiciatis, consectetur non.</p>
+  <a class="linkkk" href="">Read more</a>
+</article>
+
+<section>
+  <h2>Popular technologies</h2>
+  <ul class="listq"></ul>
+</section>
+
+
+<ul class="listw">
+  <li class="list-item">HTML</li>
+  <li class="list-item">CSS</li>
+  <li class="list-item">JavaScript</li>
 </ul>
+
 <script src="./js/lesson-7.js"></script>
 <body>
 </html>
