--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@
   <li class="list-item">JavaScript</li>
 </ul>
 
+
+<button class="my-button">Next</button>
+
+<button class="js-click">Click me</button>
+    <div class="js-box box"></div>
+
+
+<p class="key"></p>
+
+<input type="text" class="js-user-name" />
+
+    <form class="js-form feedback-form">
+      <input
+        type="text"
+        name="email"
+        class="form-input"
+        placeholder="Email"
+        required
+      />
+      <input
+        type="password"
+        name="password"
+        class="form-input"
+        placeholder="Password"
+        required
+      />
+      <textarea
+        cols="30"
+        rows="10"
+        name="comment"
+        class="form-textarea"
+        placeholder="Comment"
+      ></textarea>
+      <button class="form-button">Submit</button>
+    </form>
+
+ <div class="box js-box">
+      <div class="inner-box"></div>
+    </div>
 <script src="./js/lesson-7.js"></script>
 <body>
 </html>
