--- a/index.html
+++ b/index.html
@@ -10,106 +10,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+     <style>
+  
+      
+    </style>
     <title>lesson</title>
   </head>
   <body>
-    <ul class="list">
-  <li>First item</li>
-  <li>Second item</li>
-  <li>Third item</li>
-  <li>Fourth item</li>
-  <li>Fifth item</li>
-</ul>
-    <h1>Page title</h1>
-    <ul>
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-    </ul>
-    <ul id="menu" class="menu">
-  <li class="menu-item">home</li>
-  <li class="menu-item">about</li>
-  <li class="menu-item">gallery</li>
-  <li>blog</li>
-</ul>
-<!-- <a class="link" href="<https://goit.global>">GoIT</a>; -->
-<a class="link is-active" href="<https://goit.global>">GoIT</a>
+    <p><a href="lesson-7.html">lesson-7</a></p>
+
+    <p><a href="lesson-8.html">lesson-8</a></p>
 
 
-<p class="text">Username: <span class="sub-text">Mango</span></p>
-
-<button class="btn">hi</button>
-
-<img class="image" src="<https://picsum.photos/id/15/320/240>" alt="Rocks and waterfall" width="300" />
-
-<button type="button" data-action="save">Save text</button>
-<button type="button" data-action="close">Close editor</button>
-
-
-<div class="container">
-  <ul class="usernames">
-    <li>Mango</li>
-  </ul>
-</div>
-
-<p class="textt">Random text content</p>
-
-<article class="article">
-  <h2 class="titlee">Article title</h2>
-  <p class="texttt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, ipsa quibusdam! <strong>Praesentium</strong> accusantium fugiat distinctio quidem minima fugit eos, veniam, nam laboriosam deleniti nisi qui neque explicabo perspiciatis, consectetur non.</p>
-  <a class="linkkk" href="">Read more</a>
-</article>
-
-<section>
-  <h2>Popular technologies</h2>
-  <ul class="listq"></ul>
-</section>
-
-
-<ul class="listw">
-  <li class="list-item">HTML</li>
-  <li class="list-item">CSS</li>
-  <li class="list-item">JavaScript</li>
-</ul>
-
-
-<button class="my-button">Next</button>
-
-<button class="js-click">Click me</button>
-    <div class="js-box box"></div>
-
-
-<p class="key"></p>
-
-<input type="text" class="js-user-name" />
-
-    <form class="js-form feedback-form">
-      <input
-        type="text"
-        name="email"
-        class="form-input"
-        placeholder="Email"
-        required
-      />
-      <input
-        type="password"
-        name="password"
-        class="form-input"
-        placeholder="Password"
-        required
-      />
-      <textarea
-        cols="30"
-        rows="10"
-        name="comment"
-        class="form-textarea"
-        placeholder="Comment"
-      ></textarea>
-      <button class="form-button">Submit</button>
-    </form>
-
- <div class="box js-box">
-      <div class="inner-box"></div>
-    </div>
-<script src="./js/lesson-7.js"></script>
+    
+<script src="./js/lesson-8.js"></script>
 <body>
 </html>
