--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <p><a href="lesson-8.html">lesson-8</a></p>
 
+    <p><a href="lesson-9.html">lesson-9</a></p>
+
 
     
 <script src="./js/lesson-8.js"></script>
