--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <title>lesson</title>
   </head>
   <body>
-    <p><a href="lesson-7.html">lesson-7</a></p>
+    <!-- <p><a href="lesson-7.html">lesson-7</a></p> -->
 
-    <p><a href="lesson-8.html">lesson-8</a></p>
+    <!-- <p><a href="lesson-8.html">lesson-8</a></p> -->
 
-    <p><a href="lesson-9.html">lesson-9</a></p>
+    <!-- <p><a href="lesson-9.html">lesson-9</a></p> -->
 
+    <p><a href="lesson-10.html">lesson-10</a></p>
 
-    
-<script src="./js/lesson-8.js"></script>
+<script src="./js/lesson-10.js"></script>
 <body>
 </html>
