--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
     <!-- <p><a href="lesson-9.html">lesson-9</a></p> -->
 
-    <p><a href="lesson-10.html">lesson-10</a></p>
+    <!-- <p><a href="lesson-10.html">lesson-10</a></p> -->
 
-<script src="./js/lesson-10.js"></script>
+    <p><a href="lesson-11.html">lesson-11</a></p>
+
+
+<!-- <script src="./js/lesson-10.js"></script> -->
 <body>
 </html>
