--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
     <!-- <p><a href="lesson-10.html">lesson-10</a></p> -->
 
-    <p><a href="lesson-11.html">lesson-11</a></p>
+    <!-- <p><a href="lesson-11.html">lesson-11</a></p> -->
+
+    <p><a href="lesson-12.html">lesson-12</a></p>
+
 
 
 <!-- <script src="./js/lesson-10.js"></script> -->
