--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-     <style>
-  
-      
-    </style>
+
     <title>lesson</title>
   </head>
   <body>
@@ -27,10 +24,8 @@
 
     <!-- <p><a href="lesson-11.html">lesson-11</a></p> -->
 
-    <p><a href="lesson-12.html">lesson-12</a></p>
+    <!-- <p><a href="lesson-12.html">lesson-12</a></p> -->
 
-
-
-<!-- <script src="./js/lesson-10.js"></script> -->
-<body>
+    <script src="./js/lesson-2.js"></script>
+  </body>
 </html>
